--- a/css/main.css
+++ b/css/main.css
@@ -1,83 +1,148 @@
-@import url('https://fonts.googleapis.com/css?family=Just+Another+Hand');
-.homeDesktop {
-    background-image: url("/images/wall1.jpeg");
-    height: 100vh;
+@import url('https://fonts.googleapis.com/css?family=Righteous');
+
+
+* {
+    font-family: 'Righteous', cursive;
+    color: #FFFFFF;
+}
+
+.phoneSection {
+    min-height: 100vh;
     width: 100%;
-    background-size: cover;
-}
-
-
-
-.typing {
-    width: 530px;
-    height: 100px;
-    border-radius: 2%;
-    box-shadow: 4px 4px 4px 4px gray;
-
-    
-}
-
-.element {
-    
-    display: inline;
-    font-family: 'Just Another Hand', cursive;
-
-
-}
-
-.element1 {
-    color: black;
-    font-family: 'Just Another Hand', cursive;
-    padding-left: 8px;
-    padding-top: 108px;
-
-}
-
-.mobHome {
-    height: 100vh;
-    width: 100%;
-    background-image: url('/images/vatsal-stone-bokeh.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-   
-}
-
-.typingMob {
-    height: 90px;
-    width: 175px;
-    /* border: 4px solid white; */
-    border-top: 5px solid lightgray;
-    border-radius: 2%;
-    background-image: url('/images/walll.jpeg');
-    background-size: cover;
-
-
-}
-
-.aboutMob {
-    background-image: url('/images/walll.jpeg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
-
-.workMob {
-    background-image: url('/images/walll.jpeg');
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.contactMob {
-    background-color: black;
-    color: white;
+    background-color: #0C0B34;
     padding-bottom: 30px;
-    margin-bottom: -30px;
 }
 
-.typed-cursor {
+.phoneSection .imageContent {
+    padding-top: 80px;
+
+}
+
+.phoneSection h3{
+    color: white;
+}
+
+.roundImage {
+    border: 3px solid white;
+}
+
+section .modalContent{
+    background-color: #0C0B34;
+}
+#modalAbout p, h1{
+    color: white;
+    font-family: 'Righteous', cursive;
+}
+
+#modalAbout button{
+    background-color: transparent;
+}
+
+#modalWork button{
+    background-color: transparent;
+}
+
+#modalBlog button{
+    background-color: transparent;
+}
+
+#modalContact button{
+    background-color: transparent;
+}
+
+body {
+    padding: 0;
+    margin: 0;
+}
+
+.onlySection{
+    background-color: #0C0B34;
+    min-height: 100vh;
+}
+.modalHeading, .modalSubHeading{
+    color: white;
+    font-family: 'Righteous', cursive;
+
+}
+
+.modelContent .aboutContent {
+    padding-right: 110px;
+}
+
+.leftContent{
+    width: 47vw;
+    height: 100vh;
+    position: relative;
+}
+
+
+.rightContent{
+    background-image: url('../images/onStone05.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 49vw;
+    height: 100vh;
+    float: right;
+    padding-right: 0.5vw;
+}
+
+.contentContainer{
+    position: relative;
+}
+
+.leftContent h2{
+    color: #FFFFFF;
+}
+
+.navContainer {
+    padding-top: 34%;
+}
+
+.rightBoxTyping{
+    height: 19vh;
+    width: 36vw;
+    background-color: black;
+    border-top: 8px solid white;
+    border-radius: 2%;
+    margin-top: 62vh;
+    margin-left: 5.9vw;
+
+}
+
+li h4{
+    color: white;
+    font-family: 'Righteous', cursive;
+
+}
+
+.coffeeCode {
+    color: white;
+}
+
+.coffeeCode .code {
+    background-color: black;
+}
+
+.rightBoxTyping h3{
+    display: inline;
+    padding-left: 14px;
+    font-family: 'Righteous', cursive;
+    color: white;
+    
+}
+
+.rightBoxTyping span {
+    font-family: 'Righteous', cursive;
     color: white;
     font-size: 1.5em;
+    opacity: 1;
+    animation: blink 1.1s infinite;
+}
+
+.imageContent span {
+    font-family: 'Righteous', cursive;
+    color: white;
+    font-size: 1em;
     opacity: 1;
     animation: blink 1.1s infinite;
 }
